--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>page  404</title>
-<script>window.location.href = 'http://www10.0zz0.com/2018/05/11/01/690376481.png';</script>
+<script>window.location.href = 'http://www.jumptv.ml/img/tele-maroc.jpg';</script>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <style  type="text/css">.page-404 .title h1{font-size:20em;margin:.1em .1em 0;line-height:100%;font-weight:900;color:#f00;}
 .page-404 .title h2{font-size:4em;line-height:100%;font-weight:900;color:#f00;;padding-bottom:.2em}
